--- a/MoramGroupware/pom.xml
+++ b/MoramGroupware/pom.xml
@@ -115,7 +115,54 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>       
+		
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${org.springframework-version}</version>
+		</dependency>
+		
+		
+			<!-- Oracle JDBC 라이브러리 -->
+				<dependency>
+		<groupId>com.oracle</groupId>
+		<artifactId>ojdbc6_g</artifactId>
+		<version>11.2.0</version>
+		</dependency>
+				<!-- MyBatis 라이브러리 -->
+			<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.4.1</version>
+		</dependency>
+		 
+		 	    <!-- MyBatis Spring 라이브러리 -->
+		    <dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>1.3.0</version>
+		    </dependency>
+		    
+		     <!-- Spring JDBC 라이브러리  -->
+		    <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${org.springframework-version}</version>
+		    </dependency>
+		    
+		    
+		    	<dependency>
+   		 <groupId>com.fasterxml.jackson.core</groupId>
+   		 <artifactId>jackson-databind</artifactId>
+    	<version>2.8.4</version>
+		</dependency> 
+		
+		 
+		 
+		 
+		 
+		 
 	</dependencies>
     <build>
         <plugins>
